--- a/manufood-website/src/gallery.njk
+++ b/manufood-website/src/gallery.njk
@@ -17,11 +17,11 @@ title: Gallery - MaNu Foods
       <h2>Week of February 22, 2025</h2>
 
       <div class="menu-showcase">
-        <img src="/images/22022025/weekly-menu-20022025.jpg" alt="Menu for February 22, 2025" class="menu-img">
+        {% respImage "/images/22022025/weekly-menu-20022025.jpg", "Menu for February 22, 2025", "menu-img" %}
       </div>
 
       <div class="gallery-card">
-        <img src="/images/22022025/pork_deviled.jpg" alt="Pork Deviled" class="gallery-img">
+        {% respImage "/images/22022025/pork_deviled.jpg", "Pork Deviled", "gallery-img" %}
         <div class="gallery-overlay">
           <h3>Pork Deviled</h3>
           <p>Spicy and tangy pork dish</p>
@@ -29,7 +29,7 @@ title: Gallery - MaNu Foods
       </div>
 
       <div class="gallery-card">
-        <img src="/images/22022025/friedfish_deviled.jpg" alt="Fried Fish Deviled" class="gallery-img">
+        {% respImage "/images/22022025/friedfish_deviled.jpg", "Fried Fish Deviled", "gallery-img" %}
         <div class="gallery-overlay">
           <h3>Fried Fish Deviled</h3>
           <p>Spicy fried fish dish</p>
@@ -37,7 +37,7 @@ title: Gallery - MaNu Foods
       </div>
 
       <div class="gallery-card">
-        <img src="/images/22022025/beef_curry.jpg" alt="Beef Curry" class="gallery-img">
+        {% respImage "/images/22022025/beef_curry.jpg", "Beef Curry", "gallery-img" %}
         <div class="gallery-overlay">
           <h3>Beef Curry</h3>
           <p>Spicy Sri Lankan beef curry</p>
@@ -45,7 +45,7 @@ title: Gallery - MaNu Foods
       </div>
 
       <div class="gallery-card">
-        <img src="/images/22022025/okra_tempura.jpg" alt="Okra Tempura" class="gallery-img">
+        {% respImage "/images/22022025/okra_tempura.jpg", "Okra Tempura", "gallery-img" %}
         <div class="gallery-overlay">
           <h3>Okra Tempura</h3>
           <p>Crispy okra tempura</p>
@@ -53,7 +53,7 @@ title: Gallery - MaNu Foods
       </div>
 
       <div class="gallery-card">
-        <img src="/images/22022025/kottu_beef.jpg" alt="Kottu Beef" class="gallery-img">
+        {% respImage "/images/22022025/kottu_beef.jpg", "Kottu Beef", "gallery-img" %}
         <div class="gallery-overlay">
           <h3>Kottu Beef</h3>
           <p>Sri Lankan kottu with beef</p>
@@ -61,7 +61,7 @@ title: Gallery - MaNu Foods
       </div>
 
       <div class="gallery-card">
-        <img src="/images/22022025/kottu_chicken.jpg" alt="Kottu Chicken" class="gallery-img">
+        {% respImage "/images/22022025/kottu_chicken.jpg", "Kottu Chicken", "gallery-img" %}
         <div class="gallery-overlay">
           <h3>Kottu Chicken</h3>
           <p>Sri Lankan kottu with chicken</p>
@@ -70,7 +70,7 @@ title: Gallery - MaNu Foods
 
       <div class="dishes-grid">
         <div class="gallery-card">
-          <img src="/images/22022025/breadfruit_mallum.jpg" alt="Breadfruit (Dell Mallum)" class="gallery-img">
+          {% respImage "/images/22022025/breadfruit_mallum.jpg", "Breadfruit (Dell Mallum)", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Breadfruit (Dell Mallum)</h3>
             <p>Traditional Sri Lankan breadfruit dish</p>
@@ -78,7 +78,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/22022025/bananaflower_curry.jpg" alt="Banana Flower Curry (Kesel Muwa)" class="gallery-img">
+          {% respImage "/images/22022025/bananaflower_curry.jpg", "Banana Flower Curry (Kesel Muwa)", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Banana Flower Curry (Kesel Muwa)</h3>
             <p>Delicious banana flower curry</p>
@@ -86,7 +86,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/22022025/kottu_beef_chicken.jpg" alt="Kottu Beef & Chicken Mix" class="gallery-img">
+          {% respImage "/images/22022025/kottu_beef_chicken.jpg", "Kottu Beef & Chicken Mix", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Kottu Beef and Chicken mixes</h3>
             <p>Sri Lankan kottu with chicken and beef mixed</p>
@@ -94,7 +94,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/22022025/kottu_prep.jpg" alt="Kottu Preperation" class="gallery-img">
+          {% respImage "/images/22022025/kottu_prep.jpg", "Kottu Preperation", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Kottu preperation using godambara roti</h3>
             <p>Sri Lankan kottu prep</p>
@@ -102,7 +102,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/22022025/snakegourde_mallum.jpg" alt="Snakegourde Mallum" class="gallery-img">
+          {% respImage "/images/22022025/snakegourde_mallum.jpg", "Snakegourde Mallum", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Snakegourde Mallum</h3>
             <p>Snakegourde Mallum with cocunut flakes </p>
@@ -117,13 +117,13 @@ title: Gallery - MaNu Foods
       <h2>Week of February 15, 2025</h2>
 
       <div class="menu-showcase">
-        <img src="/images/15022025/menu.png" alt="Menu for February 15, 2025" class="menu-img">
+        {% respImage "/images/15022025/menu.png", "Menu for February 15, 2025", "menu-img" %}
         <a href="/images/15022025/menu.png" class="btn btn-light" target="_blank">View Full Menu</a>
       </div>
 
       <div class="dishes-grid">
         <div class="gallery-card">
-          <img src="/images/15022025/chicken.jpg" alt="Chicken Devilled" class="gallery-img">
+          {% respImage "/images/15022025/chicken.jpg", "Chicken Devilled", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Chicken Devilled</h3>
             <p>Traditional Sri Lankan style spicy chicken</p>
@@ -131,7 +131,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/15022025/fish.jpg" alt="Marlin Fish Curry" class="gallery-img">
+          {% respImage "/images/15022025/fish.jpg", "Marlin Fish Curry", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Fish Curry</h3>
             <p>Marlin fish in aromatic curry sauce</p>
@@ -139,7 +139,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/15022025/prawns.jpg" alt="Prawn Curry" class="gallery-img">
+          {% respImage "/images/15022025/prawns.jpg", "Prawn Curry", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Prawn Curry</h3>
             <p>Spicy coconut prawn curry</p>
@@ -147,7 +147,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/15022025/brinjol.jpg" alt="Brinjol Moju" class="gallery-img">
+          {% respImage "/images/15022025/brinjol.jpg", "Brinjol Moju", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Brinjol Moju</h3>
             <p>Pickled eggplant with spices</p>
@@ -155,7 +155,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/15022025/noodles.jpeg" alt="Noodles with Pork Curry" class="gallery-img">
+          {% respImage "/images/15022025/noodles.jpeg", "Noodles with Pork Curry", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Noodles with Pork</h3>
             <p>Stir-fried noodles served with pork curry</p>
@@ -163,7 +163,7 @@ title: Gallery - MaNu Foods
         </div>
 
         <div class="gallery-card">
-          <img src="/images/15022025/pittu.jpg" alt="Pittu with Egg Curry" class="gallery-img">
+          {% respImage "/images/15022025/pittu.jpg", "Pittu with Egg Curry", "gallery-img" %}
           <div class="gallery-overlay">
             <h3>Pittu</h3>
             <p>Steamed rice flour rolls with boiled egg curry</p>
