gallery as a collection

--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -73,6 +73,15 @@ menu:
   </div>
 </section>
 
+<section class="section-main gallery-section">
+  <div class="content-wrapper">
+    <h2>Latest From Our Kitchen</h2>
+    {% set posts = collections.gallery.slice(0,2)  %}
+    {% include "partials/gallery-grid.njk" %}
+
+  </div>
+</section>
+
 <section class="section section-dark next-pickup">
   <div class="content-wrapper">
     <div class="pickup-card">
