--- a/manufood-website/src/gallery.njk
+++ b/manufood-website/src/gallery.njk
@@ -12,170 +12,7 @@ title: Gallery - MaNu Foods
 
 <section class="section-main gallery-section">
   <div class="content-wrapper">
-    <!-- Week of February 22, 2025 -->
-    <div class="weekly-showcase">
-      <h2>Week of February 22, 2025</h2>
-
-      <div class="menu-showcase">
-        {% respImage "/images/22022025/weekly-menu-20022025.jpg", "Menu for February 22, 2025", "menu-img" %}
-      </div>
-
-      <div class="gallery-card">
-        {% respImage "/images/22022025/pork_deviled.jpg", "Pork Deviled", "gallery-img" %}
-        <div class="gallery-overlay">
-          <h3>Pork Deviled</h3>
-          <p>Spicy and tangy pork dish</p>
-        </div>
-      </div>
-
-      <div class="gallery-card">
-        {% respImage "/images/22022025/friedfish_deviled.jpg", "Fried Fish Deviled", "gallery-img" %}
-        <div class="gallery-overlay">
-          <h3>Fried Fish Deviled</h3>
-          <p>Spicy fried fish dish</p>
-        </div>
-      </div>
-
-      <div class="gallery-card">
-        {% respImage "/images/22022025/beef_curry.jpg", "Beef Curry", "gallery-img" %}
-        <div class="gallery-overlay">
-          <h3>Beef Curry</h3>
-          <p>Spicy Sri Lankan beef curry</p>
-        </div>
-      </div>
-
-      <div class="gallery-card">
-        {% respImage "/images/22022025/okra_tempura.jpg", "Okra Tempura", "gallery-img" %}
-        <div class="gallery-overlay">
-          <h3>Okra Tempura</h3>
-          <p>Crispy okra tempura</p>
-        </div>
-      </div>
-
-      <div class="gallery-card">
-        {% respImage "/images/22022025/kottu_beef.jpg", "Kottu Beef", "gallery-img" %}
-        <div class="gallery-overlay">
-          <h3>Kottu Beef</h3>
-          <p>Sri Lankan kottu with beef</p>
-        </div>
-      </div>
-
-      <div class="gallery-card">
-        {% respImage "/images/22022025/kottu_chicken.jpg", "Kottu Chicken", "gallery-img" %}
-        <div class="gallery-overlay">
-          <h3>Kottu Chicken</h3>
-          <p>Sri Lankan kottu with chicken</p>
-        </div>
-      </div>
-
-      <div class="dishes-grid">
-        <div class="gallery-card">
-          {% respImage "/images/22022025/breadfruit_mallum.jpg", "Breadfruit (Dell Mallum)", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Breadfruit (Dell Mallum)</h3>
-            <p>Traditional Sri Lankan breadfruit dish</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/22022025/bananaflower_curry.jpg", "Banana Flower Curry (Kesel Muwa)", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Banana Flower Curry (Kesel Muwa)</h3>
-            <p>Delicious banana flower curry</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/22022025/kottu_beef_chicken.jpg", "Kottu Beef & Chicken Mix", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Kottu Beef and Chicken mixes</h3>
-            <p>Sri Lankan kottu with chicken and beef mixed</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/22022025/kottu_prep.jpg", "Kottu Preperation", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Kottu preperation using godambara roti</h3>
-            <p>Sri Lankan kottu prep</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/22022025/snakegourde_mallum.jpg", "Snakegourde Mallum", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Snakegourde Mallum</h3>
-            <p>Snakegourde Mallum with cocunut flakes </p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <!-- Week of February 15, 2025 -->
-    <div class="weekly-showcase">
-      <h2>Week of February 15, 2025</h2>
-
-      <div class="menu-showcase">
-        {% respImage "/images/15022025/menu.png", "Menu for February 15, 2025", "menu-img" %}
-        <a href="/images/15022025/menu.png" class="btn btn-light" target="_blank">View Full Menu</a>
-      </div>
-
-      <div class="dishes-grid">
-        <div class="gallery-card">
-          {% respImage "/images/15022025/chicken.jpg", "Chicken Devilled", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Chicken Devilled</h3>
-            <p>Traditional Sri Lankan style spicy chicken</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/15022025/fish.jpg", "Marlin Fish Curry", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Fish Curry</h3>
-            <p>Marlin fish in aromatic curry sauce</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/15022025/prawns.jpg", "Prawn Curry", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Prawn Curry</h3>
-            <p>Spicy coconut prawn curry</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/15022025/brinjol.jpg", "Brinjol Moju", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Brinjol Moju</h3>
-            <p>Pickled eggplant with spices</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/15022025/noodles.jpeg", "Noodles with Pork Curry", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Noodles with Pork</h3>
-            <p>Stir-fried noodles served with pork curry</p>
-          </div>
-        </div>
-
-        <div class="gallery-card">
-          {% respImage "/images/15022025/pittu.jpg", "Pittu with Egg Curry", "gallery-img" %}
-          <div class="gallery-overlay">
-            <h3>Pittu</h3>
-            <p>Steamed rice flour rolls with boiled egg curry</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Week of February 8, 2025 -->
-    <div class="weekly-showcase">
-      <h2>Week of February 8, 2025</h2>
-      <!-- Repeat structure for previous week -->
-    </div>
+    {% set posts = collections.gallery | reverse %}
+    {% include "partials/gallery-grid.njk" %}
   </div>
 </section>
