--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -23,6 +23,10 @@ menu:
       price: $20
     - name: Beef Black Pepper
       price: $20
+    - name: Chicken Liver  Red Curry
+      price: $15
+    - name: Cashew and Green Pea Curry 
+      price: $20
   SPECIAL:
     - name: Sri Lankan String Hoppers (15 pieces) with Beef and Coconut Sambal
       price: $25
@@ -76,7 +80,9 @@ menu:
 <section class="section-main gallery-section">
   <div class="content-wrapper">
     <h2>Latest From Our Kitchen</h2>
-    {% set posts = collections.gallery.slice(0,2)  %}
+    {% set posts = collections
+      .gallery
+      .slice(0, 2) %}
     {% include "partials/gallery-grid.njk" %}
 
   </div>
@@ -113,7 +119,7 @@ menu:
 <h2>This Week's Menu</h2>
 
 <div class="menu-card">
-  {% respImage "images/01032025/menu-01032025.jpg", "This week's menu", "menu-img"  %} 
+  {% respImage "images/01032025/menu-01032025.jpg", "This week's menu", "menu-img"  %}
 
   {% include "partials/menu-items.njk" %}
 </div>
