--- a/manufood-website/src/_includes/partials/nav.njk
+++ b/manufood-website/src/_includes/partials/nav.njk
@@ -9,6 +9,8 @@
     <ul class="navbar">
         <li><a href="/" {% if page.url === '/' %}class="active"{% endif %}>Home</a></li>
         <li><a href="/gallery" {% if page.url === '/gallery/' %}class="active"{% endif %}>Gallery</a></li>
+        <li><a href="/ingredients" class="nav-link">Ingredients</a></li>
+
         <li><a href="/contact" {% if page.url === '/contact/' %}class="active"{% endif %}>Contact</a></li>
     </ul>
 
