--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -4,27 +4,32 @@ title: MaNu Food
 description: Authentic Sri Lankan Home Cooked Meals in Yarrabilba
 menu:
   VEGETABLE:
-    - name: Dahl with Spinach
-      price: $15
-    - name: Mung Curry
-      price: $15
-    - name: Carrot Curry
+    - name: Dhal curry
+      price: $10
+    - name: Passion fruit leave mallum
       price: $12
-    - name: Kale Mallung
-      price: $12
-    - name: Coconut Sambal
+    - name: Brinjol moju
       price: $15
-    - name: Cabbage Tempura
-      price: $12
-    - name: Mushroom Curry
+    - name: Carrot curry
+      price: $15
+    - name: Leak temp
       price: $15
   MEAT:
-    - name: Sausage Deviled
-      price: $15
-    - name: Beef Curry
+    - name: Beef with potato curry
       price: $18
-    - name: Chicken Red Curry
-      price: $15
+    - name: Prawns temp
+      price: $22
+    - name: Blue Mackerel fish curry
+      price: $20
+  SPECIALS:
+    - name: Kottu beef
+      price: $25
+    - name: Kottu chicken
+      price: $22
+    - name: Mixed fried rice
+      price: $20
+    - name: Tuna fish rotti (1 piece)
+      price: $4
 ---
 
 <section class="section-main">
@@ -73,7 +78,7 @@ menu:
       <h2>Next Pickup Date</h2>
       <div class="pickup-info">
         <div class="date-badge">
-          <span class="date">8</span>
+          <span class="date">29</span>
           <span class="month">March</span>
           <span class="year">2025</span>
         </div>
@@ -81,7 +86,7 @@ menu:
           <p>
             <strong>Location:</strong> Parks Estate, Yarrabilba, QLD</p>
           <p>
-            <strong>Order Before:</strong> 6th March</p>
+            <strong>Order Before:</strong> 26th March</p>
           <p>
             <strong>Pickup Time:</strong> After 3:00 PM</p>
         </div>
@@ -94,7 +99,6 @@ menu:
   <div class="content-wrapper">
     <h2>This Week's Menu</h2>
     <div class="menu-card">
-      {% respImage "images/08032025/menu-08032025.jpg", "This week's menu", "menu-img" %}
       {% include "partials/menu-items.njk" %}
     </div>
   </div>
@@ -128,4 +132,3 @@ menu:
     </div>
   </div>
 </section>
-
