update menu items and next pickup date

--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -6,30 +6,30 @@ menu:
   VEGETABLE:
     - name: Dhal curry
       price: $10
-    - name: Passion fruit leave mallum
-      price: $12
-    - name: Brinjol moju
+    - name: Carrot 🥕 curry
       price: $15
-    - name: Carrot curry
+    - name: Cucumber curry
       price: $15
-    - name: Leak temp
+    - name: Beetroot tempered
+      price: $15
+    - name: Broccoli 🥦 mallum
       price: $15
   MEAT:
-    - name: Beef with potato curry
+    - name: Beef curry
       price: $18
-    - name: Prawns temp
-      price: $22
-    - name: Blue Mackerel fish curry
-      price: $20
-  SPECIALS:
-    - name: Kottu beef
+    - name: Chicken devilled
+      price: $18
+    - name: Fish curry
+      price: $28
+    - name: Lamb curry
       price: $25
-    - name: Kottu chicken
-      price: $22
-    - name: Mixed fried rice
+  SPECIALS:
+    - name: Chicken Biriyani with Ryta and egg
+      price: $28
+    - name: String hoppers with beef or chicken curry and coconut sambal
+      price: $28
+    - name: Bacon fried rice
       price: $20
-    - name: Tuna fish rotti (1 piece)
-      price: $4
 ---
 
 <section class="section-main">
@@ -78,15 +78,15 @@ menu:
       <h2>Next Pickup Date</h2>
       <div class="pickup-info">
         <div class="date-badge">
-          <span class="date">29</span>
-          <span class="month">March</span>
+          <span class="date">12</span>
+          <span class="month">July</span>
           <span class="year">2025</span>
         </div>
         <div class="pickup-details">
           <p>
             <strong>Location:</strong> Parks Estate, Yarrabilba, QLD</p>
           <p>
-            <strong>Order Before:</strong> 26th March</p>
+            <strong>Order Before:</strong> 9th July </p>
           <p>
             <strong>Pickup Time:</strong> After 3:00 PM</p>
         </div>
